Sat Apr 11 23:48:30 2015  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* template/fake.rb.in: Don't assign baseruby, Because it's affect to
	  Makefile of native gem like json on bundled gems.

Sat Apr 11 23:33:22 2015  Tanaka Akira  <akr@fsij.org>

	* file.c (rb_f_test): Consider nsec for "=", "<" and ">" for "test"
	  method.

Sat Apr 11 23:26:05 2015  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* tool/rbinstall.rb: support destdir for native extention gem.

Sat Apr 11 21:02:06 2015  NAKAMURA Usaku  <usa@ruby-lang.org>

	* test/ruby/test_file_exhaustive.rb
	  (TestFileExhaustive#test_stat_socket_p): r50226 accidentally missed
	  the guard for non-unix environments.

Sat Apr 11 20:14:21 2015  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* ext/json/*, test/json/*, defs/default_gems: Gemify JSON library.
	  [fix GH-867][Feature #11057]
	* test/ruby/test_extlibs.rb: removed json gem from existence extentions.
	* gems/bundled_gems: added json gem into bundled gem.
	* lib/rdoc/rubygems_hook.rb: ignored no json environment.
	* lib/rubygems/test_case.rb, test/rubygems/*: ditto.
	* lib/rdoc/test_case.rb, test/rdoc/*: ditto.

Sat Apr 11 15:56:58 2015  Tanaka Akira  <akr@fsij.org>

	* test/ruby/test_file_exhaustive.rb: Create sample files lazily.

Sat Apr 11 14:03:47 2015  Tanaka Akira  <akr@fsij.org>

	* test/ruby/test_file_exhaustive.rb: Test character device using
	  /dev/null.

Sat Apr 11 10:59:58 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/mkmf.rb (append_cppflags, append_cflags, append_ldflags):
	  utility methods to append compiler options.

Sat Apr 11 08:22:24 2015  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* lib/rdoc/text.rb: removed duplicated code.

Sat Apr 11 04:46:42 2015  Eric Wong  <e@80x24.org>

	* lib/net/protocol.rb (rbuf_fill): avoid exception with read_nonblock
	  [ruby-core:68787] [Feature #11044]

Fri Apr 10 23:57:44 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* dir.c (need_normalization): use getattrlist() if fgetattrlist()